Added: UDP communication module. Closes #5

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "doc"]
 	path = doc
 	url = git@github.com:puhw-dev/doc.git
+[submodule "UDP_communication"]
+	path = UDP_communication
+	url = ../UDP_communication/
