--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "monitor"]
 	path = monitor
 	url = https://github.com/puhw-dev/Monitor.git
+[submodule "Sensors"]
+	path = Sensors
+	url = git@github.com:puhw-dev/Sensors.git
